--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+/.idea/codeStyles/codeStyleConfig.xml
+/.idea/modules.xml
+/.idea/tmall-web.iml
+/.idea/vcs.xml
+/.idea/.gitignore
